Flex Wrap Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -727,6 +727,7 @@ Footer
   display: flex;
   justify-content: center;
   margin-bottom: 1.5rem;
+  flex-wrap: wrap;
 }
 
 .footer-link {
